# houghLines_pthread

./: CMakeLists.txt  canny_image.cpp  houghCircles.cpp  houghlines.cpp
